--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 }
 
 *{ box-sizing:border-box; }
-
 html, body { height:100%; }
 
 body{
@@ -22,26 +21,24 @@ body{
   overflow:hidden;
   position:relative;
   color:#fff;
-
-  /* Font super leggibile */
   font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text",
                "Segoe UI", Roboto, Arial, sans-serif;
 
-  /* Se vuoi usare l'immagine iniziale prima del click */
+  /* Schermata iniziale (opzionale) */
   background: url("sfondo.jpg") center/cover no-repeat;
   background-color:#000;
 }
 
-/* Overlay leggero per leggibilità testo (senza box) */
+/* Overlay leggerissimo: aumenta leggibilità senza “spegnere” i video */
 body::before{
   content:"";
   position:fixed;
   inset:0;
-  background: rgba(0,0,0,0.18); /* basso: video visibili */
+  background: rgba(0,0,0,0.10);
   z-index:1;
 }
 
-/* VIDEO CAROUSEL */
+/* ====== VIDEO CAROUSEL ====== */
 .bg-carousel{
   position:fixed;
   inset:0;
@@ -54,7 +51,7 @@ body::before{
   inset:0;
 }
 
-/* Sfondo blur (riempie schermo) */
+/* BG blur: riempie */
 .bg-carousel video.bg{
   position:absolute;
   inset:0;
@@ -67,7 +64,7 @@ body::before{
   transition: opacity 1.2s ease;
 }
 
-/* Foreground: mostra tutto (NO TAGLIO) */
+/* FG: NO TAGLIO */
 .bg-carousel video.fg{
   position:absolute;
   inset:0;
@@ -78,47 +75,46 @@ body::before{
   transition: opacity 1.2s ease;
 }
 
-.bg-carousel video.active{
-  opacity:1;
-}
+.bg-carousel video.active{ opacity:1; }
 
-/* CONTENUTI */
+/* ====== CONTENUTI ====== */
 .screen{
   position:relative;
   z-index:2;
-  min-height: 100dvh;
-  min-height: 100vh;
+  min-height:100dvh;
+  min-height:100vh;
   display:flex;
   flex-direction:column;
   justify-content:center;
   align-items:center;
   padding:
-    calc(22px + var(--safe-top))
+    calc(20px + var(--safe-top))
     calc(18px + var(--safe-right))
     calc(22px + var(--safe-bottom))
     calc(18px + var(--safe-left));
-  gap:16px;
+  gap:28px;
   text-align:center;
 }
 
-/* Testo in CAPS con bordo nero */
+/* Titolo CAPS + bordo nero forte */
 .title{
   margin:0;
-  width:min(92vw, 760px);
-  font-weight: 900;
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
-  font-size: clamp(22px, 5.6vw, 40px);
-  line-height: 1.15;
+  width:92vw;
+  max-width:780px;
+  font-weight:900;
+  letter-spacing:0.10em;
+  text-transform:uppercase;
+  font-size:clamp(24px, 6vw, 44px);
+  line-height:1.18;
 
-  /* Bordo nero (webkit stroke) + ombra per compatibilità */
-  -webkit-text-stroke: 2px rgba(0,0,0,0.85);
+  -webkit-text-stroke: 2.5px rgba(0,0,0,0.95);
   text-shadow:
-    0 2px 0 rgba(0,0,0,0.85),
-    0 6px 18px rgba(0,0,0,0.55);
+    0 4px 0 rgba(0,0,0,0.9),
+    0 10px 26px rgba(0,0,0,0.75),
+    0 0 34px rgba(0,0,0,0.55);
 }
 
-/* Bottoni touch-friendly */
+/* Bottoni */
 .buttons{
   display:flex;
   gap:12px;
@@ -127,57 +123,57 @@ body::before{
 }
 
 button{
-  padding:14px 22px;
+  padding:16px 26px;
   font-size:18px;
   border:none;
   border-radius:999px;
   cursor:pointer;
-  min-width:120px;
+  min-width:130px;
+  font-weight:900;
+  text-transform:uppercase;
+  letter-spacing:0.08em;
   touch-action: manipulation;
   -webkit-tap-highlight-color: transparent;
-  font-weight: 800;
-  text-transform: uppercase;
-  letter-spacing: 0.06em;
+  backdrop-filter: blur(10px);
 }
 
 .yes-button{
   background:#ff0055;
-  color:white;
-  box-shadow:0 0 22px rgba(255,0,85,.65);
+  color:#fff;
+  box-shadow:0 0 24px rgba(255,0,85,.70);
 }
 
 .no-button{
   background:rgba(255,255,255,.14);
-  color:white;
+  color:#fff;
   border:1px solid rgba(255,255,255,.18);
 }
 
-/* Messaggio finale: senza box, solo testo centrato */
-#finalMessage{
-  display:none;
-}
+/* Messaggio finale: SOLO testo, niente box */
+#finalMessage{ display:none; }
 
 .finalText{
-  width:min(92vw, 760px);
-  font-size: clamp(18px, 4.6vw, 28px);
-  line-height: 1.65;
-  font-weight: 800;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  text-align:center;
+  width:92vw;
+  max-width:820px;
+  font-size:clamp(18px, 4.8vw, 30px);
+  line-height:1.65;
+  font-weight:900;
+  letter-spacing:0.06em;
+  text-transform:uppercase;
 
-  -webkit-text-stroke: 1.6px rgba(0,0,0,0.85);
+  -webkit-text-stroke: 2.2px rgba(0,0,0,0.95);
   text-shadow:
-    0 2px 0 rgba(0,0,0,0.85),
-    0 10px 22px rgba(0,0,0,0.55);
+    0 4px 0 rgba(0,0,0,0.9),
+    0 12px 28px rgba(0,0,0,0.75),
+    0 0 36px rgba(0,0,0,0.55);
 
-  animation: fadeIn 1.2s ease forwards;
+  animation: fadeIn 1.1s ease forwards;
   opacity:0;
 }
 
 @keyframes fadeIn{
-  from{opacity:0; transform: translateY(10px);}
-  to{opacity:1; transform: translateY(0);}
+  from{opacity:0; transform: translateY(10px) scale(0.99);}
+  to{opacity:1; transform: translateY(0) scale(1);}
 }
 
 /* Cuori */
@@ -191,7 +187,6 @@ button{
   text-shadow: 0 6px 18px rgba(0,0,0,.35);
   animation: fall linear infinite;
 }
-
 @keyframes fall{
   0%{ transform: translateY(-10vh); }
   100%{ transform: translateY(120vh); }
@@ -213,7 +208,7 @@ button{
   </div>
 </div>
 
-<!-- SCHERMATA INIZIALE -->
+<!-- INIZIO -->
 <div class="screen" id="main">
   <h2 class="title">POSSO AVERE IL PRIVILEGIO DI CHIAMARTI AMORE MIO? 🥺💞</h2>
   <div class="buttons">
@@ -222,21 +217,21 @@ button{
   </div>
 </div>
 
-<!-- MESSAGGIO FINALE -->
+<!-- FINALE -->
 <div class="screen" id="finalMessage">
   <div class="finalText">
     ✨ DARIA…<br><br>
     PER ME SEI SPECIALE.<br>
     IL TUO NOME NON È SOLO UN SUONO…<br>
-    È QUALCOSA CHE SENTO DENTRO. 💘<br><br>
+    È QUALCOSA CHE SENTO DENTRO. <br><br>
     È CASA. È BATTITO. È LUCE.<br><br>
     MI FAI EMOZIONARE.<br>
     MI REGALI SORRISI IMPROVVISI<br>
-    E UN AMORE CHE CRESCE OGNI GIORNO. ❤️<br><br>
+    E UN AMORE CHE CRESCE OGNI GIORNO.  <br><br>
     PERCHÉ SCEGLIERTI…<br>
     È LA COSA PIÙ BELLA CHE POTESSI FARE.<br><br>
     E QUESTO, DARIA…<br>
-    È LA COSA PIÙ NATURALE PER ME. 🔥
+    È LA COSA PIÙ NATURALE PER ME. 
   </div>
 </div>
 
@@ -246,9 +241,12 @@ button{
 </audio>
 
 <script>
-/* ====== VIDEO CAROUSEL (NO TAGLIO) + BLUR BG ====== */
-const videos = ["video1.mp4","video2.mp4","video3.mp4","video4.mp4"];
+/* ====== CONFIG ====== */
+const videos = ["video1.mp4","video2.mp4","video3.mp4","video4.mp4"]; // cambia nomi se diversi
+const MUSIC_START_AT = 44; // secondi
+const SWITCH_EVERY_MS = 10000;
 
+/* ====== VIDEO ELEMENTS ====== */
 const bgA = document.getElementById("bgA");
 const fgA = document.getElementById("fgA");
 const bgB = document.getElementById("bgB");
@@ -264,7 +262,7 @@ function setPair(pair, src){
   pair.fg.src = src;
   pair.bg.load(); pair.fg.load();
 
-  // iPhone: play solo dopo interazione -> qui parte dopo il tap su "SÌ"
+  // iPhone: play funziona dopo tap (qui siamo dentro il click su SÌ)
   pair.bg.play().catch(()=>{});
   pair.fg.play().catch(()=>{});
 }
@@ -278,6 +276,7 @@ function switchVideo(){
   index = (index + 1) % videos.length;
   setPair(idle, videos[index]);
 
+  // quando il foreground è pronto, switcho
   idle.fg.oncanplay = () => {
     setActive(active, false);
     setActive(idle, true);
@@ -293,11 +292,13 @@ function switchVideo(){
 }
 
 function startCarousel(){
-  document.getElementById("bgCarousel").style.display = "block";
+  const c = document.getElementById("bgCarousel");
+  c.style.display = "block";
+
   setPair(active, videos[0]);
   setActive(active, true);
 
-  if(!timer) timer = setInterval(switchVideo, 10000);
+  if(!timer) timer = setInterval(switchVideo, SWITCH_EVERY_MS);
 }
 
 /* ====== NO BUTTON TEASE ====== */
@@ -323,31 +324,31 @@ function handleNoClick(){
 
 /* ====== YES CLICK ====== */
 function handleYesClick(){
-  // Background nero (toglie la foto iniziale)
+  // togli sfondo immagine iniziale
   document.body.style.background = "#000";
 
-  // Video carousel
+  // video
   startCarousel();
 
-  // Schermate
+  // schermate
   document.getElementById("main").style.display = "none";
   document.getElementById("finalMessage").style.display = "flex";
 
-  // Musica (parte dopo tap -> OK su iPhone)
+  // musica (iPhone OK: parte dopo tap)
   const music = document.getElementById("bgMusic");
-  music.currentTime = 44;
+  music.currentTime = MUSIC_START_AT;
   music.volume = 0.6;
   music.play().catch(()=>{});
 
-  // Cuori (leggeri + pulizia)
+  // cuori (leggeri + pulizia)
   for(let i=0;i<55;i++){
     const heart = document.createElement("div");
-    heart.className="heart";
-    heart.textContent="❤";
+    heart.className = "heart";
+    heart.textContent = "❤";
     heart.style.left = (Math.random()*100) + "vw";
-    heart.style.animationDuration = (Math.random()*4+3) + "s";
-    heart.style.fontSize = (Math.random()*18+20) + "px";
-    heart.style.opacity = (Math.random()*0.5+0.5);
+    heart.style.animationDuration = (Math.random()*4 + 3) + "s";
+    heart.style.fontSize = (Math.random()*18 + 20) + "px";
+    heart.style.opacity = (Math.random()*0.5 + 0.5);
     document.body.appendChild(heart);
     setTimeout(()=>heart.remove(), 12000);
   }
