--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ button{
 
 <script>
 /* ====== CONFIG ====== */
-const videos = ["video1.mp4","video2.mp4","video3.mp4","video4.mp4"]; // cambia nomi se diversi
+const videos = ["Video1.mp4","Video2.mp4","Video3.mp4","Video4.mp4"]; // cambia nomi se diversi
 const MUSIC_START_AT = 44; // secondi
 const SWITCH_EVERY_MS = 10000;
 
