--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body{
                "Segoe UI", Roboto, Arial, sans-serif;
 
   /* Schermata iniziale opzionale */
-  background: url("sfondo.jpg") center/cover no-repeat;
+  background: url("sfondo.png") center/cover no-repeat;
   background-color:#000;
 }
 
