--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ button{
 <script>
 /* ====== CONFIG ====== */
 /* ATTENZIONE: nomi con V MAIUSCOLA come nel tuo repo */
-const videos = ["video2.mp4","video3.mp4","video4.mp4"]; // cambia ordine se vuoi
+const videos = ["video1.mp4","video2.mp4","video3.mp4","video4.mp4"]; // cambia ordine se vuoi
 const MUSIC_START_AT = 44;     // secondi
 const SWITCH_EVERY_MS = 10000; // cambio video
 
