--- a/index.html
+++ b/index.html
@@ -220,15 +220,15 @@ button{
     ✨ DARIA…<br><br>
     PER ME SEI SPECIALE.<br>
     IL TUO NOME NON È SOLO UN SUONO…<br>
-    È QUALCOSA CHE SENTO DENTRO. 💘<br><br>
+    È QUALCOSA CHE SENTO DENTRO.<br><br>
     È CASA. È BATTITO. È LUCE.<br><br>
     MI FAI EMOZIONARE.<br>
     MI REGALI SORRISI IMPROVVISI<br>
-    E UN AMORE CHE CRESCE OGNI GIORNO. ❤️<br><br>
+    E UN AMORE CHE CRESCE OGNI GIORNO. <br><br>
     PERCHÉ SCEGLIERTI…<br>
     È LA COSA PIÙ BELLA CHE POTESSI FARE.<br><br>
     E QUESTO, DARIA…<br>
-    È LA COSA PIÙ NATURALE PER ME. 🔥
+    È LA COSA PIÙ NATURALE PER ME. 
   </div>
 </div>
 
